Bug fix: column headers were not aligned with rows in ChartSeriesPanel
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_3.x/Server/trunk@15400 99afaf0d-6903-0410-885a-c66a8bbb5f81

--- a/SpagoBIQbeEngine/WebContent/css/worksheet.css
+++ b/SpagoBIQbeEngine/WebContent/css/worksheet.css
@@ -246,6 +246,11 @@ From http://dev.sencha.com/deploy/ext-4.0.0/examples/message-box/msg-box.html
 	margin-right:auto;
 }
 
+/* Sbi.worksheet.designer.ChartSeriesPanel */
+.chart-series-panel table {
+	margin-left:0px !important;
+}
+
 /* Sbi.worksheet.designer.ChooseImageWindow */
 #choose-image-window .x-item-over{
     /*border:1px solid #dddddd;*/
